								resulted in a setcookie	error.
[fixed]		[index.php]			Error reporting was hiding a lot of errors.
[fixed]		[Template.php]		Template::js was not declared statically.
[fixed]		[Spine.php]			Spine::destruct was not declared statically.
[fixed]		[All core libs]		Bugs relating to assigning by reference.
[fixed]		[Session.php]		Bug with Session::write not writing values correctly.

<Beta 1.0.1>
-----------------------------------------------
[changed]:	All include/requires now use a full path to the file/folder.
[fixed]:	Config::save updated to the CORE_PATH
[fixed]:	Request::build_uri only recognized a few protocols, now accepts any protocol.
[fixed]:	Template::js double closing script tags.
[new]:		Loader.php, moved loading of views/models to a single file.
[changed]:	View.php removed.
[changed]:	Access to properties and methods updated.
[fixed]:	If controller name is not specified one is attempted to be generated.

<13th August 2010>
-----------------------------------------------
[new]:		Some hooks can now accept parameters, so methods can alter certain properties.
[fixed]:	PHP 5.1.x evaluated inflector strings as variables, changed to \\1 instead of $1.
[fixed]:	PHP 5.1.1 did not accept $components parameter for parse_url(), fixed to use standard
			array method in Request.
[fixed]:	Incorrect check for PDO library caused system to load PDO when it wasn't available.
[fixed]:	Models were being included multiple times when using the Object::request method.
[fixed]:	Object::request for the current controller would return a new instance of the controller
			but now returns the current instance.
[new]:		Basic testing for new environments, confirmed working in PHP 5.1.x, 5.2.x and 5.3.x.
[fixed]:	JS files could not be ordered due to incorrect string being used in Template library.
[new]:		Added default template variables, g_base_path, g_base_url, g_tpl_path and g_tpl_url.

<12th August 2010>
-----------------------------------------------